--- a/99-Pro-Python/6-Regular EX- Patterns Special Characters.ipynb
+++ b/99-Pro-Python/6-Regular EX- Patterns Special Characters.ipynb
@@ -50,11 +50,11 @@
    "source": [
     "Pattern     Matches\n",
     "\n",
-    "\\d      A single digit\n",
+    "\\d      A single digit  => equivalent to [0-9]\n",
     "\n",
     "\\D      A single nondigit\n",
     "\n",
-    "\\w      An alphanumeric character\n",
+    "\\w      An alphanumeric character  => equivalent to [a-zA-Z0-9_]\n",
     "\n",
     "\\W      A non-alphanumeric character \n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,13 +102,14 @@
        "'OPQRSTUVWXYZ!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~ \\t\\n\\r\\x0b\\x0c'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import string\n",
+    "import re\n",
     "printable = string.printable\n",
     "print(len(printable))\n",
     "\n",
@@ -123,6 +124,269 @@
     "print(printable[50:])\n",
     "# result:\n",
     "'OPQRSTUVWXYZ!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~ \\t\\n\\r\\x0b\\x0c'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\n",
+      "0123456789abcdefABCDEF\n",
+      "01234567\n",
+      "!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\n",
+      " \t\n",
+      "\u000b\f\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(string.ascii_letters)\n",
+    "# print(string.capwords())\n",
+    "print(string.hexdigits)\n",
+    "print(string.octdigits)\n",
+    "print(string.punctuation)\n",
+    "print(string.whitespace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Which characters in printable are digits?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\illegible\\AppData\\Local\\Temp\\ipykernel_6368\\1961241520.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  re.findall('\\d', printable)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.findall('\\d', printable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Which characters are digits, letters, or an underscore?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "C:\\Users\\illegible\\AppData\\Local\\Temp\\ipykernel_6368\\1077115770.py:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "  re.findall('\\w', printable)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['0',\n",
+       " '1',\n",
+       " '2',\n",
+       " '3',\n",
+       " '4',\n",
+       " '5',\n",
+       " '6',\n",
+       " '7',\n",
+       " '8',\n",
+       " '9',\n",
+       " 'a',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " 'f',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 'j',\n",
+       " 'k',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'o',\n",
+       " 'p',\n",
+       " 'q',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'u',\n",
+       " 'v',\n",
+       " 'w',\n",
+       " 'x',\n",
+       " 'y',\n",
+       " 'z',\n",
+       " 'A',\n",
+       " 'B',\n",
+       " 'C',\n",
+       " 'D',\n",
+       " 'E',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'H',\n",
+       " 'I',\n",
+       " 'J',\n",
+       " 'K',\n",
+       " 'L',\n",
+       " 'M',\n",
+       " 'N',\n",
+       " 'O',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'R',\n",
+       " 'S',\n",
+       " 'T',\n",
+       " 'U',\n",
+       " 'V',\n",
+       " 'W',\n",
+       " 'X',\n",
+       " 'Y',\n",
+       " 'Z',\n",
+       " '_']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\w', printable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# syntax warning ?!\n",
+    "\n",
+    "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+    "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+    "C:\\Users\\illegible\\AppData\\Local\\Temp\\ipykernel_6368\\1077115770.py:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+    "  re.findall('\\w', printable)\n",
+    "\n",
+    "\n",
+    "The error messages you're seeing indicate that Python is interpreting \\w as an escape sequence but doesn't recognize it as a valid one. In regular expressions (regex), \\w is a special character that matches any word character (equivalent to [a-zA-Z0-9_]). However, outside of regex syntax, Python does not understand \\w as a shorthand for word characters.\n",
+    "\n",
+    "To fix this issue, ensure that you're using re.findall() correctly within a string that is passed as an argument. If you're trying to find all occurrences of word characters in a string named printable, you should use a raw string for the pattern to avoid Python interpreting backslashes as escape sequences. Here's how you can do it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ', '_']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Assuming 'printable' is defined somewhere above\n",
+    "pattern = r'\\w+'  # Raw string for the regex pattern\n",
+    "matches = re.findall(pattern, printable)\n",
+    "\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this corrected version, r'\\w+' is used instead of '\\w'. The r before the string indicates a raw string, which tells Python to treat backslashes as literal characters rather than escape characters. This way, \\w is correctly interpreted as part of the regex syntax, matching word characters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  * A little BREAK *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  RAW STRING?\n",
+    "\n",
+    "###  what is Raw string in python?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A raw string in Python is a string prefixed with an `r` or `R`, which tells Python to interpret the string literally, without processing any escape sequences contained within it. Escape sequences are special character combinations that start with a backslash (`\\`) and have a specific meaning, such as `\\n` for a newline, `\\t` for a tab, etc. When you use a raw string, Python treats the backslash as a normal character, not as the beginning of an escape sequence.\n",
+    "\n",
+    "Here's a simple example to illustrate the difference:\n",
+    "\n",
+    "```python\n",
+    "# Without a raw string\n",
+    "normal_string = \"This is a normal string\\nwith a newline.\"\n",
+    "print(normal_string)  # Prints: This is a normal string\n",
+    "                        #         with a newline.\n",
+    "\n",
+    "# With a raw string\n",
+    "raw_string = r\"This is a raw string\\nwith a newline.\"\n",
+    "print(raw_string)  # Prints: This is a raw string\\nwith a newline.\n",
+    "```\n",
+    "\n",
+    "In the first example, because we didn't use a raw string, Python interprets `\\n` as a newline character, so when printed, the string appears on two lines. In the second example, because we used a raw string (`r` prefix), Python treats `\\n` as two separate characters: a backslash followed by an 'n'. Therefore, the entire string, including `\\n`, is printed on one line.\n",
+    "\n",
+    "Raw strings are particularly useful in regular expressions (regex) patterns where backslashes are commonly used. By using a raw string, you avoid having to double each backslash, making the pattern easier to read and write. For example:\n",
+    "\n",
+    "```python\n",
+    "import re\n",
+    "\n",
+    "# Using a raw string for a regex pattern\n",
+    "pattern = r\"\\d+\"  # Matches one or more digits\n",
+    "\n",
+    "# Without a raw string, you would need to escape the backslashes\n",
+    "# pattern = \"\\\\d+\"\n",
+    "```\n",
+    "\n",
+    "In summary, raw strings allow you to work with strings that contain many backslashes without Python interpreting them as escape sequences, simplifying the handling of certain types of data like file paths or regular expression patterns."
    ]
   },
   {
