print(re.match('I wish', source))

--- a/99-Pro-Python/6-Regular EX- Patterns Special Characters.ipynb
+++ b/99-Pro-Python/6-Regular EX- Patterns Special Characters.ipynb
@@ -515,7 +515,7 @@
     }
    ],
    "source": [
-    "re.findall(r'\\s', printable) "
+    "re.findall(r'\\s', printable)    "
    ]
   },
   {
@@ -576,6 +576,359 @@
    ],
    "source": [
     "re.findall(r'\\S-', printable) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0',\n",
+       " '1',\n",
+       " '2',\n",
+       " '3',\n",
+       " '4',\n",
+       " '5',\n",
+       " '6',\n",
+       " '7',\n",
+       " '8',\n",
+       " '9',\n",
+       " 'a',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " 'f',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 'j',\n",
+       " 'k',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'o',\n",
+       " 'p',\n",
+       " 'q',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'u',\n",
+       " 'v',\n",
+       " 'w',\n",
+       " 'x',\n",
+       " 'y',\n",
+       " 'z',\n",
+       " 'A',\n",
+       " 'B',\n",
+       " 'C',\n",
+       " 'D',\n",
+       " 'E',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'H',\n",
+       " 'I',\n",
+       " 'J',\n",
+       " 'K',\n",
+       " 'L',\n",
+       " 'M',\n",
+       " 'N',\n",
+       " 'O',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'R',\n",
+       " 'S',\n",
+       " 'T',\n",
+       " 'U',\n",
+       " 'V',\n",
+       " 'W',\n",
+       " 'X',\n",
+       " 'Y',\n",
+       " 'Z',\n",
+       " '!',\n",
+       " '\"',\n",
+       " '#',\n",
+       " '$',\n",
+       " '%',\n",
+       " '&',\n",
+       " \"'\",\n",
+       " '(',\n",
+       " ')',\n",
+       " '*',\n",
+       " '+',\n",
+       " ',',\n",
+       " '-',\n",
+       " '.',\n",
+       " '/',\n",
+       " ':',\n",
+       " ';',\n",
+       " '<',\n",
+       " '=',\n",
+       " '>',\n",
+       " '?',\n",
+       " '@',\n",
+       " '[',\n",
+       " '\\\\',\n",
+       " ']',\n",
+       " '^',\n",
+       " '_',\n",
+       " '`',\n",
+       " '{',\n",
+       " '|',\n",
+       " '}',\n",
+       " '~']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'\\S', printable) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'\\S+', printable) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order, those were: plain old space, tab, newline, carriage return, vertical tab, and\n",
+    "form feed.\n",
+    "Regular expressions are not confined to ASCII. A \\d will match whatever Unicode\n",
+    "calls a digit, not just ASCII characters '0' through '9'. Let’s add two non-ASCII\n",
+    "lowercase letters from FileFormat.info:\n",
+    "In this test, we’ll throw in the following:\n",
+    "• Three ASCII letters\n",
+    "• Three punctuation symbols that should not match a \\w\n",
+    "• A Unicode LATIN SMALL LETTER E WITH CIRCUMFLEX (\\u00ea)\n",
+    "• A Unicode LATIN SMALL LETTER E WITH BREVE (\\u0115)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ê\n",
+      "ĕ\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['abc', 'êĕ']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 'abc' + '-/*' + '\\u00ea' + '\\u0115'\n",
+    "print('\\u00ea')\n",
+    "print('\\u0115')\n",
+    "re.findall(r'\\w', x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patterns: Using Specifiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table 12-3. Pattern specifiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Pattern     Matches\n",
+    "\n",
+    "abc      =>                    Literal abc\n",
+    "\n",
+    "( expr )    =>                  expr\n",
+    "\n",
+    "expr1 | expr2     =>               expr1 or expr2\n",
+    "\n",
+    ".               =>             Any character except \\n\n",
+    "\n",
+    "^                 =>           Start of source string\n",
+    "\n",
+    "$                   =>         End of source string\n",
+    "\n",
+    "prev ?                =>       Zero or one prev\n",
+    "\n",
+    "prev *            =>           Zero or more prev, as many as possible\n",
+    "\n",
+    "prev *?         =>             Zero or more prev, as few as possible\n",
+    "\n",
+    "prev +          =>             One or more prev, as many as possible\n",
+    "\n",
+    "prev +?         =>             One or more prev, as few as possible\n",
+    "\n",
+    "prev { m }        =>           m consecutive prev\n",
+    "\n",
+    "prev { m, n }       =>         m to n consecutive prev, as many as possible\n",
+    "\n",
+    "prev { m, n }?        =>       m to n consecutive prev, as few as possible\n",
+    "\n",
+    "[ abc ]            =>          a or b or c (same as a|b|c)\n",
+    "\n",
+    "[^ abc ]         =>            not (a or b or c)\n",
+    "\n",
+    "prev (?= next )     =>         prev if followed by next\n",
+    "\n",
+    "prev (?! next )    =>          prev if not followed by next\n",
+    "\n",
+    "(?<= prev ) next      =>       next if preceded by prev\n",
+    "\n",
+    "(?<! prev ) next     =>        next if not preceded by prev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your eyes might cross permanently when trying to read these examples. First, let’s\n",
+    "define our source string:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = '''I wish I may, I wish I might\n",
+    "... Have a dish of fish tonight.'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we apply different regular expression pattern strings to try to match something\n",
+    "in the source string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['wish', 'wish']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First, find wish anywhere:\n",
+    "re.findall('wish', source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['wish', 'wish', 'fish']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Next, find wish or fish anywhere:\n",
+    "\n",
+    "re.findall('wish|fish', source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find wish at the beginning:\n",
+    "print(re.findall('^wish', source))\n",
+    "# look at the difference of these two output\n",
+    "print(re.match('wish', source))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I wish']\n",
+      "<re.Match object; span=(0, 6), match='I wish'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find I wish at the beginning:\n",
+    "print(re.findall('^I wish', source))\n",
+    "# look at the difference of these two output\n",
+    "print(re.match('I wish', source))"
    ]
   },
   {
