can’t change a bytes variable:

--- a/99-Pro-Python/7-Binary Data.ipynb
+++ b/99-Pro-Python/7-Binary Data.ipynb
@@ -80,11 +80,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### This next example demonstrates that you can’t change a bytes variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'bytes' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m blist \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m255\u001b[39m]\n\u001b[0;32m      2\u001b[0m the_bytes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mbytes\u001b[39m(blist)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mthe_bytes\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m127\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'bytes' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "blist = [1, 2, 3, 255]\n",
+    "the_bytes = bytes(blist)\n",
+    "the_bytes[1] = 127"
+   ]
   },
   {
    "cell_type": "code",
