But a bytearray variable is mellow and mutable

--- a/99-Pro-Python/7-Binary Data.ipynb
+++ b/99-Pro-Python/7-Binary Data.ipynb
@@ -110,11 +110,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### But a bytearray variable is mellow and mutable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bytearray(b'\\x01\\x02\\x03\\xff')\n",
+      "bytearray(b'\\x01\\x7f\\x03\\xff')\n"
+     ]
+    }
+   ],
+   "source": [
+    "blist = [1, 2, 3, 255]\n",
+    "the_byte_array = bytearray(blist)\n",
+    "\n",
+    "print(the_byte_array)\n",
+    "\n",
+    "the_byte_array[1] = 127\n",
+    "\n",
+    "print(the_byte_array)"
+   ]
   },
   {
    "cell_type": "code",
