chnageds in regex

--- a/99-Pro-Python/6-Regular EX- Patterns Special Characters.ipynb
+++ b/99-Pro-Python/6-Regular EX- Patterns Special Characters.ipynb
@@ -1324,6 +1324,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "‌\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\u200c\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
