--- a/99-Pro-Python/7-Binary Data.ipynb
+++ b/99-Pro-Python/7-Binary Data.ipynb
@@ -24,8 +24,7 @@
    "source": [
     "# bytes and bytearray\n",
     "\n",
-    "Python 3 introduced the following sequences of eight-bit integers, with possible val‐\n",
-    "ues from 0 to 255, in two types:\n",
+    "Python 3 introduced the following sequences of eight-bit integers, with possible values from 0 to 255, in two types:\n",
     "• bytes is immutable, like a tuple of bytes\n",
     "• bytearray is mutable, like a list of bytes\n",
     "\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,8 +63,7 @@
     "# NOTE :\n",
     "\n",
     "The representation of a bytes value begins with a b and a quote\n",
-    "character, followed by hex sequences such as \\x02 or ASCII charac‐\n",
-    "ters, and ends with a matching quote character. Python converts\n",
+    "character, followed by hex sequences such as \\x02 or ASCII characters, and ends with a matching quote character. Python converts\n",
     "the hex sequences or ASCII characters to little integers, but shows\n",
     "byte values that are also valid ASCII encodings as ASCII\n",
     "characters:\n",
@@ -77,6 +75,25 @@
     "print(b'\\x01abc\\xff')\n",
     "=> result :\n",
     "b'\\x01abc\\xff'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'a'\n",
+      "b'a'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b'\\x61')\n",
+    "print(b'a')"
    ]
   },
   {
@@ -118,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "bytearray(b'\\x01\\x02\\x03\\xff')\n",
-      "bytearray(b'\\x01\\x7f\\x03\\xff')\n"
+      "bytearray(b'\\x7f\\x7f\\x03\\xff')\n"
      ]
     }
    ],
@@ -137,6 +154,7 @@
     "print(the_byte_array)\n",
     "\n",
     "the_byte_array[1] = 127\n",
+    "the_byte_array[0] = 127\n",
     "\n",
     "print(the_byte_array)"
    ]
@@ -167,6 +185,104 @@
     "print(the_bytes)\n",
     "the_byte_array = bytearray(range(0, 256))\n",
     "print(the_byte_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'!\"#$%&\\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\]^_`abcdefghijklmnopqrstuvwxyz{|}~'\n"
+     ]
+    }
+   ],
+   "source": [
+    "the_bytes = bytes(range(33,127))#97\n",
+    "print(the_bytes) # nice JOB :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x1f'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b'\\x1f')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert Binary Data with struct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you’ve seen, Python has many tools for manipulating text. Tools for binary data\n",
+    "are much less prevalent. The standard library contains the struct module, which\n",
+    "handles data similar to structs in C and C++. Using struct, you can convert binary\n",
+    "data to and from Python data structures.\n",
+    "Let’s see how this works with data from a PNG file—a common image format that\n",
+    "you’ll see along with GIF and JPEG files. We’ll write a small program that extracts the\n",
+    "width and height of an image from some PNG data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid PNG, width 154 height 141\n"
+     ]
+    }
+   ],
+   "source": [
+    "import struct\n",
+    "valid_png_header = b'\\x89PNG\\r\\n\\x1a\\n'\n",
+    "data = b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR' + \\\n",
+    "b'\\x00\\x00\\x00\\x9a\\x00\\x00\\x00\\x8d\\x08\\x02\\x00\\x00\\x00\\xc0'\n",
+    "if data[:8] == valid_png_header:\n",
+    "    width, height = struct.unpack('>LL', data[16:24])\n",
+    "    print('Valid PNG, width', width, 'height', height)\n",
+    "else:\n",
+    "    print('Not a valid PNG')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "above,above,above,above,above,above,above,above\n",
+    "\n",
+    "Here’s what this code does:\n",
+    "• data contains the first 30 bytes from the PNG file. To fit on the page, I joined two\n",
+    "byte strings with + and the continuation character (\\).\n",
+    "• valid_png_header contains the eight-byte sequence that marks the start of a\n",
+    "valid PNG file.\n",
+    "• width is extracted from bytes 16–19, and height from bytes 20–23.\n",
+    "The >LL is the format string that instructs unpack() how to interpret its input byte\n",
+    "sequences and assemble them into Python data types. Here’s the breakdown:\n",
+    "• The > means that integers are stored in big-endian format.\n",
+    "• Each L specifies a four-byte unsigned long integer."
    ]
   },
   {
