--- a/99-Pro-Python/7-Binary Data.ipynb
+++ b/99-Pro-Python/7-Binary Data.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +283,131 @@
     "sequences and assemble them into Python data types. Here’s the breakdown:\n",
     "• The > means that integers are stored in big-endian format.\n",
     "• Each L specifies a four-byte unsigned long integer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## You can examine each four-byte value directly:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x00\\x00\\x9a'\n",
+      "b'\\x00\\x00\\x00\\x8d'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[16:20])\n",
+    "\n",
+    "print(data[20:24])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Big-endian integers have the most significant bytes to the left. Because the width and\n",
+    "height are each less than 255, they fit into the last byte of each sequence. You can ver‐\n",
+    "ify that these hex values match the expected decimal values:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0x9a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "141"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0x8d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you want to go in the other direction and convert Python data to bytes, use the\n",
+    "struct pack() function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x00\\x00\\x00\\x9a'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import struct\n",
+    "struct.pack('>L', 154)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x00\\x00\\x00\\x8d'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "struct.pack('>L', 141)"
    ]
   },
   {
