--- a/1-lessions/02_01_Basic_Data_Types.ipynb
+++ b/1-lessions/02_01_Basic_Data_Types.ipynb
@@ -18,12 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c625d1e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 5"
+    "x = 6 # int \n",
+    "y = 9\n",
+    "z = \"string\"\n",
+    "r = 'string'\n",
+    "s = \"\"\" \n",
+    "\n",
+    "salam chetoory\n",
+    " \n",
+    "halet chetoore\n",
+    "\n",
+    "khanevadeh khooban?\n",
+    "\n",
+    "baba khoobe??\n",
+    "\n",
+    "che khabar?\n",
+    "\"\"\"\n",
+    "\n",
+    "h = ''' \n",
+    "salam chetoory\n",
+    "\n",
+    "halet chetoore\n",
+    "\n",
+    "khanevadeh khooban?\n",
+    "\n",
+    "baba khoobe??\n",
+    "\n",
+    "che khabar?\n",
+    "'''"
    ]
   },
   {
@@ -36,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "6\n"
      ]
     }
    ],
@@ -46,23 +73,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "396bd3c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "' \\nsalam chetoory\\n\\nhalet chetoore\\n\\nkhanevadeh khooban?\\n\\nbaba khoobe??\\n\\nche khabar?\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "x\n",
+    "y\n",
+    "z\n",
+    "r\n",
+    "s\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "77560441",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d11df7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "86fe557e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x)"
    ]
   },
   {
@@ -82,6 +185,35 @@
    ],
    "source": [
     "1x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b71ef652",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f52f419",
+   "metadata": {},
+   "source": [
+    " # string"
    ]
   },
   {
@@ -112,7 +244,7 @@
     }
    ],
    "source": [
-    "type(name)"
+    "type(name) "
    ]
   },
   {
@@ -134,6 +266,40 @@
    ],
    "source": [
     "type(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8df5ef53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = str(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ac1e53b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '89p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mtype\u001b[39m(z)\n\u001b[0;32m      2\u001b[0m z \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m89p\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mz\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '89p'"
+     ]
+    }
+   ],
+   "source": [
+    "type(z)\n",
+    "z = \"89p\"\n",
+    "int(z)"
    ]
   },
   {
@@ -208,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "70f204ce",
    "metadata": {},
    "outputs": [
@@ -218,7 +384,7 @@
        "(-1+0j)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "e3c34286",
    "metadata": {},
    "outputs": [],
