--- a/1-lessions/01_05_JupyterNotebook.ipynb
+++ b/1-lessions/01_05_JupyterNotebook.ipynb
@@ -6,8 +6,32 @@
    "metadata": {},
    "source": [
     "# Title\n",
-    "## Smaller Title"
+    "## Smaller Title\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e20027fe",
+   "metadata": {},
+   "source": [
+    "> salam be iran "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c96bdf62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce8092e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -21,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ab0b33ee",
    "metadata": {},
    "outputs": [
@@ -80,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
