--- a/1-lessions/02_02_Data_Structures.ipynb
+++ b/1-lessions/02_02_Data_Structures.ipynb
@@ -32,6 +32,7 @@
    ],
    "source": [
     "my_list = [1,2,3,4]\n",
+    "age_list = [25,36,12,15,16,19, \"hoda\"]\n",
     "print(my_list)"
    ]
   },
@@ -214,7 +215,8 @@
     }
    ],
    "source": [
-    "{1,2,3} == {3,2,1,1,1}"
+    "{1,2,3} == {3,2,1,1,1,2,2,2,2,2}\n",
+    "ehsan = {\"ehsan\", \"ehsan\"}"
    ]
   },
   {
@@ -335,7 +337,8 @@
    "source": [
     "my_dictionary = {\n",
     "    'apple': 'A red fruit', \n",
-    "    'bear': 'A scary animal'\n",
+    "    'bear': 'A scary animal',\n",
+    "     1 : \"test\"\n",
     "}"
    ]
   },
