--- a/1-lessions/02_03_Operators.ipynb
+++ b/1-lessions/02_03_Operators.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "' 1' + 4"
+    "'1' + 4 "
    ]
   },
   {
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "True == True"
+    "True == False"
    ]
   },
   {
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "5 <= 5"
+    "5 <= 5 "
    ]
   },
   {
