--- a/1-lessions/02_01_Basic_Data_Types.ipynb
+++ b/1-lessions/02_01_Basic_Data_Types.ipynb
@@ -18,13 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c625d1e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = 6 # int \n",
-    "y = 9\n",
+    "y = 9  # variable\n",
+    "\n",
     "z = \"string\"\n",
     "r = 'string'\n",
     "s = \"\"\" \n",
